--- a/sheet.css
+++ b/sheet.css
@@ -14,8 +14,15 @@ body{
   background-image: url('background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: left center;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+        background-position: left top;
+    }
+}
+
 .container{
   max-width: 550px;
   width: 100%;
