--- a/sheet.css
+++ b/sheet.css
@@ -26,16 +26,6 @@
       background-size: cover;
       background-position: center; /* 居中显示 */
   }
-  .container{
-    max-width: 550px;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.7); 
-    padding: 25px 60px;
-    margin-top: 40px;
-    border-radius: 5px;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.15);
-    position: relative;
-  }
 }
 
 .container{
@@ -47,6 +37,7 @@
   margin-top: 40px;
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.15);
+  
 }
 .container .title{
   font-size: 25px;
@@ -69,16 +60,19 @@
   justify-content: space-between;
   margin: 20px 0 12px 0;
 }
-form .user-details .input-box{
+form .input-box{
   margin-bottom: 15px;
   width: calc(100% / 2 - 20px);
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
 }
 form .input-box span.details{
   display: block;
   font-weight: 500;
   margin-bottom: 5px;
 }
-.user-details .input-box input{
+.input-box input{
   height: 45px;
   width: 100%;
   outline: none;
@@ -89,8 +83,8 @@ form .input-box span.details{
   border-bottom-width: 2px;
   transition: all 0.3s ease;
 }
-.user-details .input-box input:focus,
-.user-details .input-box input:valid{
+.input-box input:focus,
+.input-box input:valid{
   border-color: #9b59b6;
 }
  form .guest-side .side-title{
