--- a/sheet.css
+++ b/sheet.css
@@ -8,12 +8,16 @@
   body {
     margin: 0;
     padding: 0;
-    background-image: url('background.jpg');
+    background-image: url('init.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
-    height: 150vh; /* Set the height of the body to the height of the viewport */
+    margin-top: 20px;
 }
+
+.top {
+  text-align: center;
+}
+
 @media only screen and (max-width: 768px) {
   body {
       background-image: url('background-mobile.jpg');
@@ -24,7 +28,8 @@
 @media only screen and (max-width: 768px) {
   body {
       background-size: cover;
-      background-position: center; /* 居中显示 */
+      background-position: left; /* 居中显示 */
+      margin-top: 50px;
   }
 }
 
@@ -34,11 +39,14 @@
   background-color: rgba(255, 255, 255, 0.7); 
   padding: 25px 60px;
   margin: 0 auto; 
-  margin-top: 40px;
+  margin-top: 100px;
+  margin-bottom: 100px;
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.15);
+  display: none;
   
 }
+
 .container .title{
   font-size: 25px;
   font-weight: 500;
@@ -250,4 +258,59 @@ form .user-details .input-box{
     top: 0; /* 與頂部距離為0 */
     left: 0; /* 與左側距離為0 */
     z-index: 9999; /* 堆疊順序，確保在最上層 */
+}
+
+.top {
+  max-width: 550px;
+  width: 100%;
+  padding: 25px 60px;
+  margin: 0 auto; 
+  margin-top: 5px;
+  margin-bottom: 100px;
+}
+
+/* CSS */
+.button-30 {
+  align-items: center;
+  appearance: none;
+  background-color: #78787e;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#a2a2a4 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #030303;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.button-30:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.button-30:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.button-30:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
 }
