--- a/sheet.css
+++ b/sheet.css
@@ -11,16 +11,12 @@
     background-image: url('init.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    margin-top: 20px;
-}
-
-.top {
-  text-align: center;
 }
 
 @media only screen and (max-width: 768px) {
   body {
-      background-image: url('background-mobile.jpg');
+      background-image: url('background-mobile-2.jpg');
+      background-size: cover;
   }
 }
 
@@ -29,288 +25,46 @@
   body {
       background-size: cover;
       background-position: left; /* 居中显示 */
-      margin-top: 50px;
   }
 }
-
-.container{
-  max-width: 550px;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.7); 
-  padding: 25px 60px;
-  margin: 0 auto; 
-  margin-top: 100px;
-  margin-bottom: 100px;
-  border-radius: 5px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.15);
-  display: none;
-  
+.nav{
+  background-color: #303439; /* 背景顏色 */
+  color: #fff; /* 文字顏色 */
+  padding: 10px 20px; /* 內邊距 */
+  width: 100%; /* 寬度100% */
+  position: fixed; /* 固定位置 */
+  top: 20px; /* 與頂部距離為0 */
+  left: 0; /* 與左側距離為0 */
+  z-index: 9999; /* 堆疊順序，確保在最上層 */
 }
-
-.container .title{
-  font-size: 25px;
-  font-weight: 500;
-  position: relative;
-}
-.container .title::before{
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 3px;
-  width: 30px;
-  border-radius: 5px;
-  background: linear-gradient(135deg, #71b7e6, #6a626d);
-}
-.content form .user-details{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 20px 0 12px 0;
-}
-form .input-box{
-  margin-bottom: 15px;
-  width: calc(100% / 2 - 20px);
-  flex-wrap: wrap;
-  display: flex;
-  justify-content: space-between;
-}
-form .input-box span.details{
-  display: block;
-  font-weight: 500;
-  margin-bottom: 5px;
-}
-.input-box input{
-  height: 45px;
-  width: 100%;
-  outline: none;
-  font-size: 16px;
-  border-radius: 5px;
-  padding-left: 15px;
-  border: 1px solid #ccc;
-  border-bottom-width: 2px;
-  transition: all 0.3s ease;
-}
-.input-box input:focus,
-.input-box input:valid{
-  border-color: #d9d9d9;
-}
- form .guest-side .side-title{
-  font-size: 15px;
-  font-weight: 450;
- }
- form .category{
-   display: flex;
-   width: 56%;
-   margin: 14px 0 ;
-   justify-content: space-between;
- }
- form .category label{
-   display: flex;
-   align-items: center;
-   cursor: pointer;
- }
- form .category label .dot{
-  height: 18px;
-  width: 18px;
-  border-radius: 50%;
-  margin-right: 10px;
-  background: #d9d9d9;
-  border: 5px solid transparent;
-  transition: all 0.3s ease;
-}
- #dot-1:checked ~ .category label .one,
- #dot-2:checked ~ .category label .two{
-   background: #9b59b6;
-   border-color: #d9d9d9;
- }
-
- form .attendance-details .attendance-title{
-  font-size: 15px;
-  font-weight: 450;
- }
- form .a-category{
-   display: flex;
-   width: 56%;
-   margin: 14px 0 ;
-   justify-content: space-between;
- }
- form .a-category label{
-   display: flex;
-   align-items: center;
-   cursor: pointer;
- }
- form .a-category label .dot{
-  height: 18px;
-  width: 18px;
-  border-radius: 50%;
-  margin-right: 10px;
-  background: #d9d9d9;
-  border: 5px solid transparent;
-  transition: all 0.3s ease;
-}
- #adot-1:checked ~ .a-category label .one,
- #adot-2:checked ~ .a-category label .two{
-   background: #414041;
-   border-color: #d9d9d9;
- }
-
- form .invitation-details .invitation-title{
-  font-size: 15px;
-  font-weight: 450;
- }
- form .i-category{
-   display: flex;
-   width: 56%;
-   margin: 14px 0 ;
-   justify-content: space-between;
- }
- form .i-category label{
-   display: flex;
-   align-items: center;
-   cursor: pointer;
- }
- form .i-category label .dot{
-  height: 18px;
-  width: 18px;
-  border-radius: 50%;
-  margin-right: 10px;
-  background: #d9d9d9;
-  border: 5px solid transparent;
-  transition: all 0.3s ease;
-}
- #idot-1:checked ~ .i-category label .one,
- #idot-2:checked ~ .i-category label .two{
-   background: #414041;
-   border-color: #d9d9d9;
- }
-
- form .stay-details .stay-title{
-  font-size: 15px;
-  font-weight: 450;
- }
- form .s-category{
-   display: flex;
-   width: 56%;
-   margin: 14px 0 ;
-   justify-content: space-between;
- }
- form .s-category label{
-   display: flex;
-   align-items: center;
-   cursor: pointer;
- }
- form .s-category label .dot{
-  height: 18px;
-  width: 18px;
-  border-radius: 50%;
-  margin-right: 10px;
-  background: #d9d9d9;
-  border: 5px solid transparent;
-  transition: all 0.3s ease;
-}
- #sdot-1:checked ~ .s-category label .one,
- #sdot-2:checked ~ .s-category label .two{
-   background: #414041;
-   border-color: #d9d9d9;
- }
- 
- form input[type="radio"]{
-   display: none;
- }
- form .button{
-   height: 45px;
-   margin: 35px 0
- }
- form .button input{
-   height: 100%;
-   width: 100%;
-   border-radius: 5px;
-   border: none;
-   color: #fff;
-   font-size: 18px;
-   font-weight: 500;
-   letter-spacing: 1px;
-   cursor: pointer;
-   transition: all 0.3s ease;
-   background: linear-gradient(135deg, #bbc4ca, #837f84);
- }
- form .button input:hover{
-  /* transform: scale(0.99); */
-  background: linear-gradient(-135deg, #4b555b, #363038);
-  }
- @media(max-width: 584px){
- .container{
-  max-width: 100%;
-}
-form .user-details .input-box{
-    margin-bottom: 15px;
-    width: 100%;
-  }
-}
-
-.top-title {
-    background-color: #303439; /* 背景顏色 */
+h1{
+  text-align: center;
+  background-color: #303439; /* 背景顏色 */
     color: #fff; /* 文字顏色 */
     padding: 10px 20px; /* 內邊距 */
     width: 100%; /* 寬度100% */
-    position: fixed; /* 固定位置 */
     top: 0; /* 與頂部距離為0 */
     left: 0; /* 與左側距離為0 */
     z-index: 9999; /* 堆疊順序，確保在最上層 */
+    font-size: medium;
 }
-
-.top {
-  max-width: 550px;
-  width: 100%;
-  padding: 25px 60px;
-  margin: 0 auto; 
-  margin-top: 5px;
-  margin-bottom: 100px;
-}
-
-/* CSS */
-.button-30 {
-  align-items: center;
-  appearance: none;
-  background-color: #78787e;
-  border-radius: 4px;
-  border-width: 0;
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#a2a2a4 0 -3px 0 inset;
-  box-sizing: border-box;
-  color: #030303;
-  cursor: pointer;
-  display: inline-flex;
-  font-family: "JetBrains Mono",monospace;
-  height: 48px;
-  justify-content: center;
-  line-height: 1;
-  list-style: none;
+.navbar ul{
+  list-style-type: none;
+  background-color: rgb(122, 120, 120);
+  padding: 0px;
+  margin: 0px;
   overflow: hidden;
-  padding-left: 16px;
-  padding-right: 16px;
-  position: relative;
-  text-align: left;
+}
+.navbar a{
+  color: white;
   text-decoration: none;
-  transition: box-shadow .15s,transform .15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  will-change: box-shadow,transform;
-  font-size: 18px;
+  padding: 15px;
+  display: block;
+  text-align: center;
 }
-
-.button-30:focus {
-  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+.navbar a:hover{
+  background-color: hsl(0, 2%, 76%);
 }
-
-.button-30:hover {
-  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-  transform: translateY(-2px);
-}
-
-.button-30:active {
-  box-shadow: #D6D6E7 0 3px 7px inset;
-  transform: translateY(2px);
+.navbar li{
+  float: left;
 }
