--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     background-image: url('init.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    margin-top: 20px;
+    margin-top: 0px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -268,7 +268,7 @@ form .input-box span.details{
  }
  form .button{
    height: 45px;
-   margin: 35px 0
+   margin: 35px 0;
  }
  form .button input{
    height: 100%;
@@ -297,68 +297,27 @@ form .user-details .input-box{
   }
 }
 
-.top-title {
-    background-color: #303439; /* 背景顏色 */
-    color: #fff; /* 文字顏色 */
-    padding: 10px 20px; /* 內邊距 */
-    width: 100%; /* 寬度100% */
-    position: fixed; /* 固定位置 */
-    top: 0; /* 與頂部距離為0 */
-    left: 0; /* 與左側距離為0 */
-    z-index: 9999; /* 堆疊順序，確保在最上層 */
+@keyframes pulse {
+  0% { opacity: 1; }
+  50% { opacity: 0.5; }
+  100% { opacity: 1; }
 }
 
-.top {
-  max-width: 550px;
-  width: 100%;
-  padding: 25px 60px;
-  margin: 0 auto; 
-  margin-top: 5px;
-  margin-bottom: 100px;
+.submited {
+  justify-content: center; /* 水平居中 */
+  align-items: center; /* 垂直居中 */
+  display: inline-block;
 }
 
-/* CSS */
-.button-30 {
-  align-items: center;
-  appearance: none;
-  background-color: #78787e;
-  border-radius: 4px;
-  border-width: 0;
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#a2a2a4 0 -3px 0 inset;
-  box-sizing: border-box;
-  color: #030303;
-  cursor: pointer;
-  display: inline-flex;
-  font-family: "JetBrains Mono",monospace;
-  height: 48px;
-  justify-content: center;
-  line-height: 1;
-  list-style: none;
-  overflow: hidden;
-  padding-left: 16px;
-  padding-right: 16px;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transition: box-shadow .15s,transform .15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  will-change: box-shadow,transform;
-  font-size: 18px;
+.submited-text {
+  text-align: center;
+  display: none;
+  animation: pulse 1s infinite;
 }
 
-.button-30:focus {
-  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-}
+/*
 
-.button-30:hover {
-  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-  transform: translateY(-2px);
+form .button{
+  display: none;
 }
-
-.button-30:active {
-  box-shadow: #D6D6E7 0 3px 7px inset;
-  transform: translateY(2px);
-}
+*/
