--- a/location.css
+++ b/location.css
@@ -15,7 +15,7 @@
 
 @media only screen and (max-width: 768px) {
   body {
-      background-image: url('background-mobile.jpg');
+      background-image: url('location-mobile2.jpg');
       background-size: cover;
   }
 }
